--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
         "joi": "^17.1.1",
+        "joi-image-extension": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
