--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "joi": "^17.1.1",
         "joi-image-extension": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^3.0.0",
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
         "nodemailer": "^6.4.6",
